# madr

./: Dockerfile  LICENCE  README.md  compose.yaml  entrypoint.sh  main.py  memory:  pyproject.toml  test.db
.github/workflows/: pipeline.yaml
alembic/: env.py
alembic/versions/: 8503fc61aa16_create_tables.py  c0c5fcbd6253_create_users_table.py  eaf7664169ff_create_all_tables.py  fa3d105fa845_create_all_tables.py
src/madr/: app.py  db.py  models.py  schemas.py  settings.py  users.py  utils.py
src/madr/routers/: authors.py  books.py
tests/: conftest.py  factories.py  test_authors.py  test_books.py  test_db.py
